Update login handler for support create session when session no exist
